# cmake-test-module

./: CMakeLists.txt  LICENSE  README  README.md  TestModuleConfig.cmake  example_run.ps1
.github/workflows/: cmake.yml
tests/: CMakeLists.txt
tests/scenario_01/: CMakeLists.txt
tests/scenario_02/: CMakeLists.txt
